--- a/public/css/main.css
+++ b/public/css/main.css
@@ -101,6 +101,7 @@ section {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
